# cmake-tutorial

./: README.md
Cross-compiling/: CMakeLists.txt  Hello.cc  arm-toolchain.cmake  autobuild-arm.sh  autobuild-host.sh  autoclean.sh  buildit-arm.sh  buildit.sh
Test0/: CMakeLists.txt  Test0Header.h  Test0Source.cc  buildit.sh
Test1/: CMakeLists.txt  Test1Header.h.in  Test1Source.cc  autobuild.sh  buildit.sh
Test2/: CMakeLists.txt  Test2Header.h.in  Test2Source.cc  autobuild.sh  buildit-set-compiler.sh  buildit.sh
Test2/HelperFunctions/: CMakeLists.txt  HelperFunctions.cc  HelperFunctions.h
Test3/: CMakeLists.txt  Test3Header.h.in  Test3Source.cc  autobuild.sh  autoclean.sh  buildit.sh
Test3/HelperFunctions/: CMakeLists.txt  HelperFunctions.cc
Test4/: CMakeLists.txt  Test4Header.h.in  Test4Source.cc  autobuild.sh  buildit.sh
Test4/HelperFunctions/: HelperFunctions.h
